--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -3,6 +3,6 @@
   <display-name>Hackathon Chart</display-name>
   
   <welcome-file-list>
-    <welcome-file>main.html</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 </web-app>
